chore: strengthen branch protection settings in repo.ini

--- a/repo.ini
+++ b/repo.ini
@@ -47,10 +47,10 @@ EXTRA_APPS=""
 # ------------------------------------------------------------------------------
 
 # Number of required PR approvals (0 = no approvals required)
-REQUIRED_APPROVALS="0"
+REQUIRED_APPROVALS="1"
 
 # Require code owner reviews (true/false)
-REQUIRE_CODEOWNER_REVIEWS="false"
+REQUIRE_CODEOWNER_REVIEWS="true"
 
 # Dismiss stale PR reviews when new commits are pushed (true/false)
 DISMISS_STALE_REVIEWS="true"
