fix(ci): correct status check name configuration
- Restore workflow name as 'CI' for better visibility in GitHub Actions
- Update repo.ini to use comma-separated check names with exact format
  'CI / lint,CI / test' matching GitHub's actual naming convention
- Update setup-branch-protection.sh to parse comma-separated values,
  preserving spaces within check names

GitHub names checks as 'workflow-name / job-name'. This change aligns
our configuration with that reality rather than fighting it.

--- a/repo.ini
+++ b/repo.ini
@@ -59,13 +59,11 @@ DISMISS_STALE_REVIEWS="true"
 ENFORCE_ADMINS="true"
 
 # Required status checks (space-separated job names from CI workflow)
-# These must match the job names in .github/workflows/ci.yml exactly
-# Common patterns:
-#   Rust:    "fmt clippy test"
-#   Node.js: "lint test build"
-#   Python:  "lint test"
-#   Shell:   "lint test-unit test-integration"
-STATUS_CHECKS="lint test"
+# These must match EXACTLY how GitHub names the checks.
+# Format: "workflow-name / job-name" (note the spaces around the slash)
+# Example: With workflow "name: CI" and jobs "lint" and "test",
+#          the check names become "CI / lint" and "CI / test"
+STATUS_CHECKS="CI / lint,CI / test"
 
 # ------------------------------------------------------------------------------
 # Contact Information
