--- a/repo.ini
+++ b/repo.ini
@@ -58,12 +58,12 @@ DISMISS_STALE_REVIEWS="true"
 # Enforce rules for administrators (true/false)
 ENFORCE_ADMINS="true"
 
-# Required status checks (space-separated job names from CI workflow)
+# Required status checks (comma-separated job names from CI workflow)
 # These must match EXACTLY how GitHub names the checks.
-# Format: "workflow-name / job-name" (note the spaces around the slash)
+# Format: "workflow-name/job-name" (no spaces around the slash in gh CLI output)
 # Example: With workflow "name: CI" and jobs "lint" and "test",
-#          the check names become "CI / lint" and "CI / test"
-STATUS_CHECKS="CI / lint,CI / test"
+#          the check names become "CI/lint" and "CI/test"
+STATUS_CHECKS="CI/lint,CI/test"
 
 # ------------------------------------------------------------------------------
 # Contact Information
