fix(config): use correct status check names
GitHub check contexts use the job name directly (e.g. 'lint', 'test'),
not 'workflow-name/job-name' format. Updated repo.ini to match.

Verified by successfully merging PR #6 without --admin flag.

--- a/repo.ini
+++ b/repo.ini
@@ -59,11 +59,9 @@ DISMISS_STALE_REVIEWS="true"
 ENFORCE_ADMINS="true"
 
 # Required status checks (comma-separated job names from CI workflow)
-# These must match EXACTLY how GitHub names the checks.
-# Format: "workflow-name/job-name" (no spaces around the slash in gh CLI output)
-# Example: With workflow "name: CI" and jobs "lint" and "test",
-#          the check names become "CI/lint" and "CI/test"
-STATUS_CHECKS="CI/lint,CI/test"
+# These must match EXACTLY the job names in .github/workflows/ci.yml
+# GitHub uses the job name directly as the check context.
+STATUS_CHECKS="lint,test"
 
 # ------------------------------------------------------------------------------
 # Contact Information
