--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,12 @@ jobs:
 
       - name: Install kcov
         run: |
-          sudo apt-get install -y kcov
+          # kcov is not in Ubuntu apt repos, install from GitHub releases
+          KCOV_VERSION=43
+          wget -q "https://github.com/SimonKagworter/kcov/releases/download/v${KCOV_VERSION}/kcov-amd64.tar.gz"
+          tar xzf kcov-amd64.tar.gz
+          sudo mv usr/local/bin/kcov /usr/local/bin/
+          rm -rf usr kcov-amd64.tar.gz
 
       - name: Run template tests with coverage
         run: |
