--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,12 +33,16 @@ jobs:
 
       - name: Install kcov
         run: |
-          # kcov is not in Ubuntu apt repos, install from GitHub releases
-          KCOV_VERSION=43
-          wget -q "https://github.com/SimonKagworter/kcov/releases/download/v${KCOV_VERSION}/kcov-amd64.tar.gz"
-          tar xzf kcov-amd64.tar.gz
-          sudo mv usr/local/bin/kcov /usr/local/bin/
-          rm -rf usr kcov-amd64.tar.gz
+          # Install kcov build dependencies
+          sudo apt-get install -y binutils-dev libcurl4-openssl-dev zlib1g-dev \
+            libdw-dev libiberty-dev cmake g++ python3
+          # Build kcov from source
+          git clone --depth 1 --branch v43 https://github.com/SimonKagstrom/kcov.git /tmp/kcov
+          cd /tmp/kcov
+          mkdir build && cd build
+          cmake ..
+          make -j$(nproc)
+          sudo make install
 
       - name: Run template tests with coverage
         run: |
