--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   lint:
@@ -21,8 +21,42 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Compare licenses
+
+      - name: Compare licences
         run: |
           diff LICENSE LICENSE-MIT
-      - name: Run tests
-        run: echo "No tests configured for template repo yet."
+
+      - name: Install bats-core
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y bats
+
+      - name: Install kcov
+        run: |
+          # Install kcov build dependencies
+          sudo apt-get install -y binutils-dev libcurl4-openssl-dev zlib1g-dev \
+            libdw-dev libiberty-dev cmake g++ python3
+          # Build kcov from source
+          git clone --depth 1 --branch v43 https://github.com/SimonKagstrom/kcov.git /tmp/kcov
+          cd /tmp/kcov
+          mkdir build && cd build
+          cmake ..
+          make -j$(nproc)
+          sudo make install
+
+      - name: Run template tests with coverage
+        run: |
+          mkdir -p coverage
+          # Run bats tests through kcov for coverage
+          kcov --include-path=.github/gh-scripts \
+               --exclude-pattern=tests \
+               coverage \
+               bats tests/template/
+
+      - name: Upload coverage to Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: coverage/bats/cobertura.xml
+          format: cobertura
+        continue-on-error: true
