--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -7,3 +7,6 @@ MD013: false
 
 # Allow first heading to not be h1 (for templates with frontmatter)
 MD041: false
+
+# Disable table column style rule - we prefer aligned tables for readability
+MD060: false
